hphp/test/slow/object/const/not_on_enum.php.expectf
Fatal error: Interfaces, traits and enums may not be declared __Const in %s/not_on_enum.php on line 3
